--- a/_posts/2015-08-14-blog-post-4.md
+++ b/_posts/2015-08-14-blog-post-4.md
@@ -10,6 +10,12 @@ tags:
 
 This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
 
+Can I put mathematics in here!
+
+$$
+I = \int f \;dx
+$$
+
 Headings are cool
 ======
 
